--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -94,7 +94,7 @@
   background-image: url('../images/white-splash.svg');
   background-color: #d3d666;
   background-repeat: no-repeat;
-  background-size: 200%;
+  background-size: cover;
 }
 
 
